--- a/docs/styles/nav-primary.less
+++ b/docs/styles/nav-primary.less
@@ -43,6 +43,8 @@ nav.primary
             .rspn-desktop
             ({
                 writing-mode: vertical-rl; 
+                width: 1em;
+                line-height: 1em;
             });
         }
     }
@@ -57,8 +59,9 @@ nav.primary
     
     .rspn-desktop
     ({
-        /* blows on firefox because of https://bugzilla.mozilla.org/show_bug.cgi?id=1223180 */
         writing-mode: vertical-rl; 
+        /* workaround on firefox because of https://bugzilla.mozilla.org/show_bug.cgi?id=1223180 */
+        width: 1em;
     });
 
     > .inner 
